# DeepSleep

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  file_common.c  file_common.h  main.c  sleep.c  sleep.h
